Update html for Git test
Git test changes

--- a/exercises/html/index.html
+++ b/exercises/html/index.html
@@ -13,6 +13,7 @@
 		<img src="rocketspacelogo.png" alt="Rocket Space Logo" title="RocketU - Web Developer Training" width="200" border="0" />
 	</header>	
 	<div>
+		<h1>Making changes for Git!!</h1>
 		<h1>Web Developer Training</h1>
 		<p id="intro">Welcome to RocketU. Details of our web developer courses are shown below. 
 		If you would like to make a reservation, or have an enquiry, then just complete the form on this 
