changes for first demo

--- a/exercises/facebook/index.html
+++ b/exercises/facebook/index.html
@@ -75,7 +75,7 @@
 		});
 
 		FB.api('/me?fields=picture', function(response){
-			$('body').append('<img src='+response.picture.data.url+'>');
+			//$('body').append('<img src='+response.picture.data.url+'>');
 				
 				console.log(response);
 		});
