--- a/product/edit-photo.html
+++ b/product/edit-photo.html
@@ -3,13 +3,20 @@
 <head>
 	<title>Kandid - Edit Photo</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>
+	<script type="text/javascript" src="js/seed.js"></script>
+	<script type="text/javascript" src="js/fb-login.js"></script>	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/application.css"/>
 </head>
 <body>
-	<div id="edit-photo-page" class="">
+<div id="fb-root"></div>
+	<div id="edit-photo-page" class="container">
+		<h1>Kandid - edit photo</h1>
+		<button type="button" id="edit-customize" class="btn btn-default" onclick="location.href='customize-photo.html';">customize</button>
+		<canvas id="edit-canvas" width="600" height="600"></canvas>
 		
 	</div>
 </body>
